Openshift Labs/lab6_sidecar/openshift/cityapp-api-sidecar.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cityapp-api-sidecar
  labels:
    app: cityapp-api-sidecar
spec:
  ports:
  - port: 3000
    name: http
  selector:
    app: cityapp-api-sidecar
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cityapp-api-sidecar
  name: cityapp-api-sidecar
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: cityapp-api-sidecar
  wildcardPolicy: None

---
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: cityapp-api-sidecar
  name: cityapp-api-sidecar
spec:
  replicas: 1
  selector:
    app: cityapp-api-sidecar
  template:
    metadata:
      labels:
        app: cityapp-api-sidecar
    spec:
      serviceAccountName: cityapp-api-sidecar
      containers:
      - image: "image-registry.openshift-image-registry.svc:5000/cityapp/cityapp_api:1.0"
        imagePullPolicy: Always
        name: cityapp
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
            readOnly: true
#      - image: cyberark/conjur-kubernetes-authenticator
      - image: image-registry.openshift-image-registry.svc:5000/cityapp/conjur-kubernetes-authenticator:latest
        imagePullPolicy: Always
        name: authenticator
        volumeMounts:
          - mountPath: /run/conjur
            name: conjur-access-token
      volumes:
        - name: conjur-access-token
          emptyDir:
            medium: Memory
